...
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/drawerNav_layout">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerNav_accountFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="Account" />
        <item
            android:id="@+id/drawerNav_deviceList"
            android:icon="@drawable/ic_baseline_sensors_24"
            android:title="Devices" />
...
